--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,9 @@ h1{
   flex-direction: column;
   align-items: center;
   border: 3px solid black;
-  /* width: 600px; */
+  /* max-width: 600px; */
 }
 
-.status-bar{
-  border: 3px solid black;
-  /* width: 600px; */
-}
 
 #blackjack-rules > h3{
 
@@ -31,4 +27,23 @@ h1{
 
 #blackjack-rules > h5{
   margin: 0;
+}
+
+.status-bar{
+  padding: 0px 20px;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  background-color: rgba(0,0,0,0.6);
+}
+
+.money-tracker{
+  display: flex;
+  gap: 16px;
+}
+
+.action-area{
+  display: flex;
+  justify-content: center;
+  padding: 16px;
 }
