--- a/css/cardstarter.css
+++ b/css/cardstarter.css
@@ -2,7 +2,10 @@
 .card {
   box-sizing: border-box;
   display: inline-block;
-  margin: 5px 5px 50px 5px;
+  /* margin-top: -10px; */
+  /* margin-bottom: 10px; */
+  margin-left: -20px;
+  margin-right: -20px;
   cursor: pointer;
   /* Set the card's dimensions, and size it relative to
      it's font size. */
