--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,10 @@ h1{
   font-size: 12px;
   font-weight: 400;
   margin: 3px;
-  padding: 3px;
+  padding: 3px 8px;
   background-color: rgba(0,0,0,0.6);
   color: white;
   text-align: center;
   border-radius: 4px;
+  min-width: 20px
 }
