--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
+.second{
+  display: none
+}
 
+.third{
+  display: none;
+}
+
+
+
+
+
+
+
+/* 
 body{
   background-color: green;
   font-family: sans-serif;
@@ -14,7 +28,6 @@ h1{
   flex-direction: column;
   align-items: center;
   border: 3px solid black;
-  /* max-width: 600px; */
 }
 
 
@@ -60,4 +73,5 @@ h1{
   text-align: center;
   border-radius: 4px;
   min-width: 20px
-}
+} */
+
