--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 
 
-/* 
+
 body{
   background-color: green;
   font-family: sans-serif;
@@ -73,5 +73,5 @@ h1{
   text-align: center;
   border-radius: 4px;
   min-width: 20px
-} */
+}
 
