--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/* .second{
-  display: none;
-}
-
-.third{
-  display: none;
-} */
-
-.inactive{
-  display: none;
-}
-
 button, input{
   background-color: #FFD670;
   border-color: #FFD670;
@@ -19,7 +7,9 @@ button, input{
   height: 24px;
 }
 
-
+.hidden{
+  padding: 0;
+}
 
 input{
   width: 60px;
@@ -88,8 +78,14 @@ p{
   margin: 8px;
 }
 
+.status-bar > p {
+  margin: 8px;
+}
+
 .status-bar{
-  padding: 0px 20px;
+  margin-top: 20px;
+  padding: 0px 12px;
+  border-radius: 16px;
   display: flex;
   justify-content: space-between;
   color: white;
